// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > renders empty list 1`] = `
<DocumentFragment>
  <div
    class="breadcrumbs -ml-1 w-fit px-1 text-sm"
  >
    <ul />
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders root path 1`] = `
<DocumentFragment>
  <div
    class="breadcrumbs -ml-1 w-fit px-1 text-sm"
  >
    <ul>
      <li>
        <a
          href="/"
        >
          Home
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > shows labeled paths 1`] = `
<DocumentFragment>
  <div
    class="breadcrumbs -ml-1 w-fit px-1 text-sm"
  >
    <ul>
      <li>
        <a
          href="/profile"
        >
          My Profile
        </a>
      </li>
      <li>
        <a
          href="/profile/edit"
        >
          Edit Profile
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumbs > shows unlabeled paths 1`] = `
<DocumentFragment>
  <div
    class="breadcrumbs -ml-1 w-fit px-1 text-sm"
  >
    <ul>
      <li>
        <a
          href="/"
        >
          dashboard
        </a>
      </li>
      <li>
        <a
          href="/profile"
        >
          profile
        </a>
      </li>
      <li>
        <a
          href="/profile/edit"
        >
          edit
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
